--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "http://eugenedelgado.github.io/todo-list",
+	"homepage": "http://eugenedelgado.github.io/todo-list-app",
 	"name": "second-react-application",
 	"version": "0.1.0",
 	"private": true,
